--- a/{{cookiecutter.repo_name}}/pytest.ini
+++ b/{{cookiecutter.repo_name}}/pytest.ini
@@ -1,18 +1,10 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = {{ cookiecutter.django_project_name }}.settings
 
-; now we can just run `pytest` instead of `pytest tests/`
-testpaths = src
+; assume we're going to have the tests outside apps
+testpaths = tests
 
 addopts =
-; show detailed test counts
     -ra
-; stop after 10 failures
-    --maxfail=10
-    --tb=native
-
-markers =
-    integration_test: mark test as integration test.
-
-; WARNING: global 10 min timeout (may break xdist)
-timeout = 600
+    --strict
+    --tb=short
