Auto restart so that reloader keeps working (it's simplistic and only restarts running containers) when there are start issues (like syntax errors).

--- a/{{cookiecutter.repo_name}}/docker-compose.yml
+++ b/{{cookiecutter.repo_name}}/docker-compose.yml
@@ -19,6 +19,7 @@ x-base-service:
       CELERY_BROKER_URL: redis://redis:6379/0
     entrypoint: ["pysu", "app", "holdup", "--verbose", "tcp://pg:5432", "--"]
     stop_signal: SIGINT
+    restart: unless-stopped
 
 services:
   pg:
