--- a/{{cookiecutter.repo_name}}/docker-compose.test.yml
+++ b/{{cookiecutter.repo_name}}/docker-compose.test.yml
@@ -11,6 +11,8 @@ services:
       DB_USER: app
       DB_PASSWORD: app
       DB_HOST: pg
+      PYTHONHUNTER:
+      PYTHONHUNTERCONFIG:
     stop_signal: SIGINT
     depends_on:
     - pg
